tooling/nargo_cli/tests/snapshots/execution_success/a_1327_concrete_in_generic/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[a_1327_concrete_in_generic] Circuit output: 0x01
